2025-09-24T01:25:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17963527082 # 776
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-24
* notice: last 14d: unq all: 7 1718
* notice: prev accum: outdated-unq outdated-all / unq all: 2824 269350 / 2856 271145
* notice: next accum: outdated-unq outdated-all / unq all: 2825 269474 / 2858 271268
* notice: prev exec diff / last date diff / accum: unq all: +2 +123 -1 -76 / +2 +30 -0 -0 / 2 30
* notice: removed / changed dates: [2025-09-09] / [2025-09-10 2025-09-23 2025-09-24]

2025-09-23T01:24:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17933115732 # 775
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-23
* notice: last 14d: unq all: 7 1720
* notice: prev accum: outdated-unq outdated-all / unq all: 2822 269226 / 2854 271014
* notice: next accum: outdated-unq outdated-all / unq all: 2824 269350 / 2856 271145
* notice: prev exec diff / last date diff / accum: unq all: +2 +131 -0 -75 / +2 +31 -0 -0 / 2 31
* notice: removed / changed dates: [2025-09-08] / [2025-09-09 2025-09-22 2025-09-23]

2025-09-22T01:40:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17902083511 # 774
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-22
* notice: last 14d: unq all: 7 1715
* notice: prev accum: outdated-unq outdated-all / unq all: 2820 269099 / 2851 270885
* notice: next accum: outdated-unq outdated-all / unq all: 2822 269226 / 2854 271014
* notice: prev exec diff / last date diff / accum: unq all: +3 +129 -1 -73 / +2 +24 -0 -0 / 2 24
* notice: removed / changed dates: [2025-09-07] / [2025-09-08 2025-09-21 2025-09-22]

2025-09-21T01:40:29Z: