@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-12T01:23:21Z",
-  "count" : 127,
-  "count_minmax" : [ 127, 127 ],
-  "count_decinc" : [ -0, +127 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2025-09-25T01:26:08Z",
+  "count" : 51,
+  "count_minmax" : [ 51, 127 ],
+  "count_decinc" : [ -76, +127 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
