@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-24T01:25:17Z",
-  "count" : 30,
-  "count_minmax" : [ 30, 30 ],
-  "count_decinc" : [ -0, +30 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2025-09-25T01:26:08Z",
+  "count" : 125,
+  "count_minmax" : [ 30, 125 ],
+  "count_decinc" : [ -0, +125 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 2, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
 }
