@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2025-09-25T01:26:08Z",
+  "count" : 30,
+  "count_minmax" : [ 30, 30 ],
+  "count_decinc" : [ -0, +30 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
+}
