@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-09-24T01:25:17Z",
-  "count_outdated" : 269474,
-  "uniques_outdated" : 2825,
-  "count" : 271268,
-  "uniques" : 2858,
+  "timestamp" : "2025-09-25T01:26:08Z",
+  "count_outdated" : 269599,
+  "uniques_outdated" : 2827,
+  "count" : 271393,
+  "uniques" : 2861,
   "clones" : [
     {
-      "timestamp": "2025-09-10T00:00:00Z",
-      "count": 49,
-      "count_minmax": [ 31, 125 ],
-      "count_decinc": [ 76, 125 ],
+      "timestamp": "2025-09-11T00:00:00Z",
+      "count": 51,
+      "count_minmax": [ 51, 127 ],
+      "count_decinc": [ 76, 127 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2025-09-11T00:00:00Z",
-      "count": 127,
-      "count_minmax": [ 127, 127 ],
-      "count_decinc": [ 0, 127 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
     },
     {
       "timestamp": "2025-09-12T00:00:00Z",
@@ -133,6 +124,15 @@
     },
     {
       "timestamp": "2025-09-24T00:00:00Z",
+      "count": 125,
+      "count_minmax": [ 30, 125 ],
+      "count_decinc": [ 0, 125 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ],
+      "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-09-25T00:00:00Z",
       "count": 30,
       "count_minmax": [ 30, 30 ],
       "count_decinc": [ 0, 30 ],
