@@ -1,16 +1,11 @@
 {
   "count": 1718,
-  "uniques": 7,
+  "uniques": 8,
   "clones": [
     {
-      "timestamp": "2025-09-10T00:00:00Z",
-      "count": 49,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-09-11T00:00:00Z",
-      "count": 127,
-      "uniques": 2
+      "count": 51,
+      "uniques": 1
     },
     {
       "timestamp": "2025-09-12T00:00:00Z",
@@ -74,6 +69,11 @@
     },
     {
       "timestamp": "2025-09-24T00:00:00Z",
+      "count": 125,
+      "uniques": 3
+    },
+    {
+      "timestamp": "2025-09-25T00:00:00Z",
       "count": 30,
       "uniques": 2
     }
